manifests/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: ${APP_NAMESPACE}
  labels:
    app: frontend
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8000
    name: http-website
  selector:
    app: frontend
---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: ${APP_NAMESPACE}
  labels:
    app: backend
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8000
    name: http-website
  selector:
    app: backend
