manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: ${APP_NAMESPACE}
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: frontend.${APP_DOMAIN_NAME}
    http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 80
  - host: backend.${APP_DOMAIN_NAME}
    http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 80
  tls:
  - hosts:
      - frontend.${APP_DOMAIN_NAME}
      - backend.${APP_DOMAIN_NAME}
    secretName:
      wildcard-tls
